[project]
name = "waf-test"
version = "0.1.0"
description = "WAF payload size testing tool"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
waf-test = "waftest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["waftest.py"]

[tool.uv]
package = true
